# populationsim

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
example_calm/: run_populationsim.py
example_survey_weighting/: run_populationsim.py
example_weighting_subsample/: evaluate.py  grid_search.py  run_populationsim.py
example_weighting_subsample/configs/: controls.csv  settings.yaml
example_weighting_subsample/data/: control_totals_pumas.csv  seed_households.csv
example_weighting_subsample/data/run2_daypat/: control_totals_pumas.csv  geo_cross_walk.csv
example_weighting_subsample/output/: final_incidence_table.csv  final_summary_hh_weights.csv  mem.csv  timing_log.csv
populationsim/: balancer.py  simul_balancer.py
populationsim/steps/: expand_households.py  integerize_final_seed_weights.py  setup_data_structures.py  sub_balancing.py  summarize.py
