[tool.poetry]
name = "populationsim"
version = "0.6.2"
description = "Population Synthesis (for ActivitySim)"
authors = ["Ben Stabler <ben.stabler@rsginc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
activitysim = "1.1.3"
tqdm = "^4.66.1"
ortools = "^9.8.3296"
numpy = "1.25.2"
pandas = "2.1.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
